<resources>
    <string name="app_name">ChoreManager</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="menuTitle">Name</string>
    <string name="menuText">TextView</string>
    <string name="menu">Menu</string>
    <string name="userName">userName</string>
    <string name="roleName">RoleName</string>
    <string name="userProfilePicture">User Profile Picture</string>
    <string name="deleteSelected">Delete Selected</string>
    <string name="addItem">Add Item</string>
    <string name="item1">Item A</string>
    <string name="item2">Item B</string>
    <string name="item3">Item C</string>
    <string name="item4">Item D</string>
    <string name="g_item1">Item A</string>
    <string name="g_item2">Item B</string>
    <string name="g_item3">Item C</string>
    <string name="g_item4">Item D</string>
    <string name="materialsTitle">Materials</string>
    <string name="groceriesTitle">Groceries</string>
    <string name="shopping_item1">Item A</string>
    <string name="shopping_item2">Item B</string>
    <string name="shopping_item3">Item C</string>
    <string name="shopping_item4">Item D</string>
    <string name="g_shopping_item1">Item A</string>
    <string name="g_shopping_item2">Item B</string>
    <string name="g_shopping_item3">Item C</string>
    <string name="g_shopping_item4">Item D</string>
    <string name="markPurchased">Mark Purchased</string>
    <string name="currentUser">Current User</string>
    <string name="createNewUser">+ Create New User</string>
    <string name="changeTheme">Change Theme</string>
    <string name="switchUser">Switch User</string>
    <string name="createChore">+ Create New Chore</string>
    <string name="sort_desc">sort list of chores</string>
    <string name="sortButton">Sort</string>
    <string name="filterButton">Filter</string>
    <string name="filter_desc">filter chore list</string>
    <string name="chore_button1">Wash Car</string>
    <string name="chore_deadline1">Deadline: 10/21/17 @12:59</string>
    <string name="chore_button2">Wash The Dog</string>
    <string name="chore_deadline2">Deadline: 10/21/17 @12:59</string>
    <string name="chore_button">Clean Bathroom Mirror</string>
    <string name="chore_button3">Make Grocery List</string>
    <string name="chore_button4">Mow The Lawn</string>
    <string name="chore_button5">Create New Cores</string>
    <string name="chore_button6">Drop Tables</string>
    <string name="descTextView">TextView</string>
    <string name="notes">Notes</string>
    <string name="textview">TextView</string>
    <string name="descriptionTitle">Description</string>
    <string name="add">add</string>
    <string name="parentCommandTitle">Parental Commands</string>
    <string name="resetDataButton">Reset All Data</string>
    <string name="mark_incomplete_button">Mark Incomplete</string>
    <string name="mark_complete_button">Mark Complete</string>
    <string name="edit_chore_button">Edit Chore</string>
    <string name="unassignButton">Unassign</string>
    <string name="reassignButton">Reassign</string>
    <string name="save_and_exit">Save and Exit</string>
    <string name="chore_name">Chore Name:</string>
    <string name="required_materials">Required Materials:</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="reapeated">Reapeated:</string>
    <string name="user_desc">opens menu of users</string>
    <string name="desc_reqmaterials_button">button to select required materials in new chore activity</string>
    <string name="descTitle">Description</string>
    <string name="string_assign_to">Assign To:</string>
    <string name="string_deadline">Deadline:</string>
    <string name="string_chore_type">Chore Type:</string>
    <string name="settings_buttons_desc">button for settings activity</string>
    <string name="materials_buttons_desc">button for list of materials activity</string>
    <string name="chores_buttons_desc">button for list of all chores activity</string>
    <string name="groceries_buttons_desc">button for current groceries at home</string>
    <string name="shoppinglist_buttons_desc">button for shopping list activity</string>
    <string name="stirng_current_user">Current User:</string>
    <string name="string_Peter">Peter Lam</string>
    <string name="desc_hint">Please Enter A Description of The Task</string>
    <string name="note_hint">Please Enter A Note</string>
    <string name="repeatable_text">Repeatable:</string>
    <string name="numberOfTimes_String">Number of Times</string>
    <string name="string_pick_deadline">Pick Deadline</string>
    <string name="string_total_points">Total Points: </string>
    <string name="string_points">Points: X</string>
    <string name="materials">Required Materials:</string>
    <string name="string_choremanagericon">choreManagerIcon</string>
    <string name="string_add_material">Add Material</string>
    <string name="string_add_grocery">Add Grocery</string>
    <string name="string_customNewItemTitle">Please Enter An Item Name</string>
    <string name="stinrg_itemDesc">Please Add An Item Name</string>
    <string name="string_confirm">Confirm</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_please_select_a_category">Please Select A Category</string>
    <string name="string_placeholder_chore_name">Chore Name Here</string>
    <string name="string_placeholder_status">Status: Pending</string>
    <string name="string_delete_item_warning">Are you sure you want to delete the selected items? This cannot be undone.</string>
    <string name="string_account_name">Name</string>
    <string name="string_account_type">Account Type</string>
    <string name="string_specifc_user_profile_hint">profile picture of specific @string/stirng_current_user</string>
    <string name="string_create_user">Create User</string>
    <string name="string_select_a_new_avatar">Select A New Avatar</string>
    <string name="desc_avatar_image">avatar image</string>
    <string name="string_assigned_resources_button">View \nAssigned Resources</string>
    <string name="string_user_menu">User Menu</string>
    <string name="string_assigned_resources">Assigned Resources</string>
    <string name="string_please_assign_user">Please Assign User</string>

    <string-array name="themeSpinner_Options">
        <item name="defaultTheme">Default Theme</item>
        <item name="notDefaultTheme">Not Default Theme</item>
        <item name="notNotDefaultTheme">Not Not Default Theme</item>
    </string-array>

    <string-array name="userSpinner_Options">
        <item name="user0">Peter Lam</item>
        <item name="user1">Alan Tran</item>
        <item name="user2">Sam Rennie</item>
        <item name="user3">Bilal Khalid</item>
    </string-array>

    <string-array name="choreTypeSpinner_Options">
        <item name="miscOption">Misc</item>
        <item name="cleaningOption">Cleaning</item>
        <item name="cookingOption">Cooking</item>
    </string-array>

    <string-array name="repeatableSpinner_Options">
        <item name="none">None</item>
        <item name="daily">Daily</item>
        <item name="weekly">Weekly</item>
        <item name="monthly">Monthly</item>
    </string-array>

    <string-array name="totalPointsSpinner_Options">
        <item name="one">1</item>
        <item name="two">2</item>
        <item name="three">3</item>
        <item name="four">4</item>
        <item name="five">5</item>
        <item name="six">6</item>
        <item name="seven">7</item>
        <item name="eight">8</item>
        <item name="nine">9</item>
        <item name="ten">10</item>
    </string-array>

    <string-array name="shoppingItemTypeSpinner_Options">
        <item name="material">Material</item>
        <item name="grocery">Grocery</item>
    </string-array>

    <string-array name="accountTypeSpinner_Options">
        <item name="adminParent">Admin / Parent</item>
        <item name="child">Child</item>

    </string-array>
</resources>
