<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alan.peter.bilal.sam.choremanager.ShoppingListActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <ScrollView
            android:id="@+id/materialScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight=".5"
            android:background="@color/secondaryLightColor"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/shopping_item1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shopping_item1"
                    android:textSize="25sp" />

                <CheckBox
                    android:id="@+id/shopping_item2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shopping_item2"
                    android:textSize="25sp" />

                <CheckBox
                    android:id="@+id/shopping_item3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shopping_item3"
                    android:textSize="25sp" />

                <CheckBox
                    android:id="@+id/shopping_item4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shopping_item4"
                    android:textSize="25sp" />

            </LinearLayout>

        </ScrollView>

        <ScrollView
            android:id="@+id/groceryScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight=".5"
            android:background="@color/secondaryLightColor"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/g_shopping_item1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/g_shopping_item1"
                    android:textSize="25sp" />

                <CheckBox
                    android:id="@+id/g_shopping_item2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/g_shopping_item2"
                    android:textSize="25sp" />

                <CheckBox
                    android:id="@+id/g_shopping_item3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/g_shopping_item3"
                    android:textSize="25sp" />

                <CheckBox
                    android:id="@+id/g_shopping_item4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/g_shopping_item4"
                    android:textSize="25sp" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:baselineAligned="false"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/purchasedButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/markPurchased"
            android:textSize="14sp" />

        <Button
            android:id="@+id/deleteButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/deleteSelected"
            android:textAlignment="center"
            android:textSize="14sp" />

        <Button
            android:id="@+id/addGrocery"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:onClick="addItemOnClick"
            android:text="@string/addItem" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginEnd="1dp"
        android:background="@color/colorAccent"
        android:gravity="center_horizontal"
        android:text="@string/materialsTitle"
        android:textColor="@color/secondaryTextColor"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:background="@color/colorAccent"
        android:gravity="center_horizontal"
        android:text="@string/groceriesTitle"
        android:textColor="@color/secondaryTextColor"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
