<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialogTitleName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/string_delete_item_warning"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/cancelButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="2.5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="2.5dp"
            android:layout_marginStart="5dp"
            android:layout_weight=".99"
            android:background="@color/colorAccent"
            android:text="@string/string_cancel"
            android:textColor="@color/secondaryTextColor" />

        <Button
            android:id="@+id/confirmButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="2.5dp"
            android:layout_weight=".99"
            android:background="@color/colorAccent"
            android:text="@string/string_confirm"
            android:textColor="@color/secondaryTextColor" />
    </LinearLayout>
</LinearLayout>
